@startuml

entity "mon_the_thao" as mon_the_thao {
	* ma_mon
	+ ten_mon
	+ loai_mon
}

entity "noi_dung_thi_dau" as noi_dung_thi_dau {
	* ma_noi_dung
	+ ten_noi_dung
	+ le_phi_tham_gia
}

entity "van_dong_vien" as van_dong_vien {
	* ma_van_dong_vien
	+ ho_ten
	+ gioi_tinh
	+ ngay_sinh
	+ thong_tin_lien_he
}

entity "tham_gia" as tham_gia {
}

mon_the_thao |o--|{ noi_dung_thi_dau

van_dong_vien |o--|{ tham_gia

noi_dung_thi_dau |o--|{ tham_gia

@enduml